# CS2-sdk

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
ext/imgui/: CMakeLists.txt
ext/minhook/: CMakeLists.txt  trampoline.c
src/: dllmain.cpp
src/Console/: Console.h
src/Game/: Game.cpp  Game.h
src/Hacks/: Esp.cpp  Esp.h
src/Hacks/Config/: Config.h
src/Hooks/: Hooks.cpp  Hooks.h
src/Menu/: Menu.cpp  Menu.h
src/Timer/: Timer.h
src/Utility/: Offsets.h  Utility.h  Vector.h
